<resources>
    <!-- 공통 -->
    <string name="app_name">JJB2.0</string>
    <string name="back">뒤로가기</string>
    <string name="next">다음</string>

    <!-- 회원가입: 전화번호 화면 -->
    <string name="signup_title">JJB 로그인/회원가입</string>
    <string name="phone_label">전화번호</string>
    <string name="phone_hint">전화번호(9자리)</string>
    <string name="phone_helper">통화나 문자로 전화번호를 확인하겠습니다. 일반 문자 메시지 요금 및 데이터 요금이 부과될 수 있습니다.</string>

    <!-- 로그인 화면 텍스트 -->
    <string name="brand_logo">집잠빌</string>
    <string name="login_title1_left">집 잠</string>
    <string name="login_title1_right">시</string>
    <string name="login_title2_left">빌</string>
    <string name="login_title2_right">려드립니다</string>
    <string name="email_hint">이메일</string>
    <string name="password_hint">비밀번호</string>
    <string name="login_btn">로그인</string>
    <string name="signup_btn">회원가입</string>



    <!-- Material Calendar 용 String array-->
    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_web_client_id">
        808477217447-q46epfae21jnuvrob05utekjdm5529jj.apps.googleusercontent.com
    </string>

</resources>